fix: source control icons not visible (#4219)

--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -168,3 +168,6 @@
 .MaskIconLinkExternal {
   mask-image: url(/icons/link-external.svg);
 }
+.MaskIconDiscard {
+  mask-image: url(/icons/discard.svg);
+}
